fix footer image overflow 1500px. fix form responsive

--- a/_src/assets/scss/core/_settings.scss
+++ b/_src/assets/scss/core/_settings.scss
@@ -1,4 +1,13 @@
-$color-white: #ffffff;
+/* #################### COLORS #####################  */
+
+$color-white: #fff;
 $color-aquamarine: aquamarine;
+$color-gray-primary: #b8b8b9;
+$color-gray-secondary: #54585a;
+
+
+
+/* #################### TIPOGRAPHY #################  */
+
 $font-rubik: "rubik", sans-serif;
 $headerFontSize: 22px;
